samples/_failures_safe/1761292246_516d19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcc4f616.c: In function ‘print_token’:
./samples/SAFE/__tmp_fcc4f616.c:177:12: error: missing terminating " character
  177 |     printf("Line %d, Column
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fcc4f616.c:177:5: error: expected expression at end of input
  177 |     printf("Line %d, Column
      |     ^~~~~~
./samples/SAFE/__tmp_fcc4f616.c:177:5: error: expected declaration or statement at end of input
